# ZenSync

./: Cargo.toml  README.md
client/: Cargo.toml  config.toml
client/src/: config.rs  handshake_handler.rs  lib.rs
commons/: Cargo.toml
commons/src/: file_manager.rs  keys_manager.rs  lib.rs  packeter.rs
interface/: Cargo.toml  build.rs  resources.gresource.xml
interface/src/: configuration_data.rs  main.rs
interface/src/persistance/: configuration_persistance.rs  mod.rs  window_persistance.rs
interface/src/ui/component/: folder.ui  properties.ui
interface/src/ui/generics/: banner.ui
interface/src/ui/logic/: home_setup.rs  keys_setup.rs  mod.rs  username_setup.rs  welcome_setup.rs
interface/src/ui/style/: utility.css
interface/src/ui/window/: home.ui  keys.ui  preferences-page.ui  username.ui  welcome.ui
interface/src/utils/: conf_file.rs  config.hash  cron.rs  display.rs  filesystem.rs  integrity.rs  messages.rs  mod.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
protos/src/protos/: file.proto  requests.proto  responses.proto
server/: Cargo.toml  config.toml
server-tools/: Cargo.toml
server-tools/src/: cli.rs  main.rs
server/src/: cli.rs  client_checker.rs  config.rs  handshake_handler.rs  main.rs
