[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
blake3 = "1.5.5"
lazy_static = "1.5.0"
prost = "0.13.4"
prost-build = "0.13.4"
ring = "0.17.8"
serde = { version = "1.0.215", features = ["derive"] }
snow = { version = "0.9.6", features = ["ring-resolver", "ring-accelerated"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
protos = { path = "../protos" }
commons = { path = "../commons" }
