[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.5"
anyhow = "1.0.94"
ring = "0.17.8"
lazy_static = "1.5.0"
snow = { version = "0.9.6", features = ["ring-resolver", "ring-accelerated"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
protos = { path = "../protos" }
rand = "0.8.5"
base64 = "0.22.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
