[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_12"] }
libadwaita = "0.7.1"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
once_cell = "1.17.0"
openssl = "0.10"
sha2 = "0.10"
dirs = "5.0"
whoami = "1.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.5"
chrono = "0.4"
client = { path = "../client" }
commons = { path = "../commons" }

[env]
CONF_PATH = "./zen-sync/conf.json"
