[package]
name = "zen-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
ring = "0.17.8"
serde = { version = "1.0.215", features = ["derive"] }
snow = { version = "0.9.6", features = ["ring-resolver", "ring-accelerated"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
protos = { path = "../protos" }
commons = { path = "../commons" }
lazy_static = "1.5.0"
rand = "0.8.5"
nix = { version = "0.29.0", features = ["user"] }
